apps/hello-world/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: hello-world
  namespace: hello-world
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app: hello-world
