apps/hello-world/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: hello-world
  namespace: hello-world
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`hello.thiemo.click`)
      kind: Rule
      services:
        - name: hello-world
          port: 80
  tls:
    secretName: hello-world-tls
